--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
     "@heroicons/react": "2.0.18",
+    "@mui/icons-material": "^5.15.10",
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "5.14.20",
     "@mui/system": "5.14.20",
     "@mui/x-date-pickers": "6.18.4",
     "apexcharts": "3.44.2",
     "date-fns": "2.30.0",
+    "dayjs": "^1.11.10",
     "formik": "2.4.5",
     "next": "14.0.4",
     "nprogress": "0.2.0",
