--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   },
   "dependencies": {
     "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.1",
+    "@emotion/react": "^11.11.1",
     "@emotion/server": "11.11.0",
-    "@emotion/styled": "11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "2.0.18",
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "5.14.20",
-    "@mui/system": "5.14.20",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@mui/system": "^5.15.11",
     "@mui/x-date-pickers": "6.18.4",
     "apexcharts": "3.44.2",
     "date-fns": "2.30.0",
@@ -33,8 +34,11 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
+    "react-calendar": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-virtuoso": "^4.7.1",
     "simplebar-react": "^3.2.4",
+    "styled-components": "^6.1.8",
     "yup": "1.3.2"
   },
   "devDependencies": {
