--- a/package.json
+++ b/package.json
@@ -28,17 +28,25 @@
     "apexcharts": "3.44.2",
     "date-fns": "2.30.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.9.0",
     "formik": "2.4.5",
-    "next": "14.0.4",
+    "moment": "^2.30.1",
+    "next": "^14.0.4",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
+    "react-big-calendar": "^1.11.2",
     "react-calendar": "^4.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-virtuoso": "^4.7.1",
+    "rsuite": "^5.55.0",
     "simplebar-react": "^3.2.4",
     "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
     "yup": "1.3.2"
   },
   "devDependencies": {
